--- a/src/Web/WebMVC/wwwroot/css/catalog/catalog.component.css
+++ b/src/Web/WebMVC/wwwroot/css/catalog/catalog.component.css
@@ -148,3 +148,12 @@
   content: '$';
 }
 
+.esh-catalog-weight {
+    font-size: 24px;
+    font-weight: 900;
+    text-align: center;
+}
+
+    .esh-catalog-weight::after {
+        content: 'g';
+    }
